--- a/_config.yml
+++ b/_config.yml
@@ -9,18 +9,18 @@
 title: 尹小白的技术专栏
 brief-intro: Android and Python Coder
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://pigheade3.github.io" # the base hostname & protocol for your site
+url: "https://nikkidada.github.io" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
 # other links
-twitter_username: #gaohaoyang126
-facebook_username: #gaohaoyang.water
-github_username:  pigheade3
+twitter_username:
+facebook_username:
+github_username: nikkidada
 email: speakingcamp@yahoo.com
-weibo_username: 
-zhihu_username: 
-linkedIn_username: 
+weibo_username: 尹小白不白
+zhihu_username:
+linkedIn_username:
 dribbble_username:
 
 description_footer: 来自尹小白的个人专栏！
@@ -28,8 +28,8 @@ description_footer: 来自尹小白的个人专栏！
 # comments
 # two ways to comment, only choose one, and use your own short name
 # 两种评论插件，选一个就好了，使用自己的 short_name
-duoshuo_shortname: #hygblog
-disqus_shortname: #gaohaoyang
+duoshuo_shortname:
+disqus_shortname:
 
 # statistic analysis 统计代码
 # 百度统计 id，将统计代码替换为自己的百度统计id，即
@@ -56,7 +56,9 @@ tag_dir: tag/
 excerpt_separator: "\n\n\n\n"
 
 # paginate
+
 plugins: [jekyll-paginate]
 paginate: 6
 port: 4001
-theme: jekyll-theme-time-machine
+#theme: jekyll-theme-time-machine
+remote_theme: pages-themes/time-machine@v0.2.0
